<resources>
    <string name="app_name">Greety</string>
    <string name="action_settings">Settings</string>
    <string name="todo">todo</string>
    <string name="ok">ok</string>
    <string name="spring_holidays_backgrounds">Spring Holidays Backgrounds</string>
    <string name="winter_holidays_backgrounds">Winter Holidays Backgrounds</string>
    <string name="summer_holidays_backgrounds">Summer Holidays Backgrounds</string>
    <string name="autumn_holidays_backgrounds">Autumn Holidays Backgrounds</string>
    <string name="other_backgrounds">Other backgrounds</string>
    <string name="choose_holiday">Choose Holiday</string>
    <string name="choose_background">Choose Background</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="todo3">TODO</string>
    <string name="todo2">TODO</string>
    <string name="photo_succesfully_saved">Photo Succesfully Saved</string>
    <string name="you_can_also_share_it">You Can Also Share It</string>
    <string name="latest_edited_photo">Latest Edited Photo</string>
    <string name="use_button_below_to_make_new_greety">Use Button Below To Make New Greety</string>
    <string name="last_edited_greety">Last Edited Greety</string>
    <string name="if_its_ok_then_tap_on_picture">If its OK then Tap on picture</string>
    <string name="use_buttons_below_to_make_new_greety">Use Buttons Below To Make New Greety</string>
</resources>
