<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".NewGreeting">

        <TextView

            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/choose_holiday"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#205302"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="Choose Holiday" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/bg"
                android:contentDescription="@string/todo"
                android:gravity="center"
                tools:targetApi="m" />
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/winter_holidays_backgrounds"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="25sp"
                tools:text="Winter Holidays Backgrounds" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/mrch1"
                android:contentDescription="@string/todo"
                android:text="@string/ok" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/spring_holidays_backgrounds"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="25sp"
                tools:text="Spring Holidays Backgrounds" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/summer0"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/summer_holidays_backgrounds"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="25sp"
                tools:text="Summer Holidays Backgrounds" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/autumn0"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/autumn_holidays_backgrounds"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="25sp"
                tools:text="Autumn Holidays Backgrounds" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@drawable/other0"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/my_border"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/other_backgrounds"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="25sp"
                tools:text="Other backgrounds" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>
